[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

name = "ggml"
keywords = ["machine learning", "deep learning", "inference engine"]
version = "0.0.1"
description = "GGML ffi bindings in python"
authors = ["Georgi Gerganov <ggerganov@gmail.com>"]
classifiers = [
    'Development Status :: 2 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.6"
dependencies = ['numpy']
