[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

name = "ggml"
authors = [{ name = "Georgi Gerganov", email = "ggerganov@gmail.com" }]
keywords = ["machine learning", "deep learning", "inference engine"]
version = "0.0.1"
description = "GGML ffi bindings in python"
classifiers = [
    'Development Status :: 2 - Beta',
    "License :: OSI Approved :: MIT License",
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
readme = "README.md"
# license = { file = "../../LICENSE" }
requires-python = ">=3.6"
dependencies = ['numpy']
